--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ image:
 
 tasks:
   - name: Run the project
-    init: ./build.sh Watch
+    init: dotnet fsi build.fsx --watch
 
 vscode:
   extensions:
